# matmul

./: .gitignore  .travis.yml  Findmatmul.cmake  README.md  matmulConfig.cmake
benchmark/: CMakeLists.txt
benchmark/src/: main.c
benchmark/tools/: plot_all.sh  plot_time.plt
cmake/: common.cmake
include/matmul/: matmul.h
include/matmul/common/: Alloc.h  AlpakaHelper.hpp  Array.h  Config.h  Cuda.h  Mat.h  Time.h
include/matmul/par/: Alpaka.h  Alpaka.hpp  AlpakaOmpNative.h  AlpakaOmpNative.hpp  AlpakaTiling.h  AlpakaTiling.hpp  BlasCublas.h  BlasMkl.h  Cuda.h  MpiCannon.h  MpiDns.h  Omp.h  OpenAcc.h  PhiOffBlasMkl.h  PhiOffOmp.h  StrassenOmp2.h
include/matmul/seq/: Basic.h  MultipleOpts.h  SingleOpts.h  Strassen.h
src/: array.c  array.h  config.h  config_build.h  main.c  malloc.c  malloc.h  mat_common.c  mat_common.h  matmul_par_blas_cublas.cu  matmul_par_blas_cublas.cuh  matmul_par_blas_mkl.c  matmul_par_blas_mkl.h  matmul_par_cuda.cu  matmul_par_cuda.cuh  matmul_par_mpi_cannon.c  matmul_par_mpi_cannon.h  matmul_par_mpi_dns.c  matmul_par_mpi_dns.h  matmul_par_openacc.c  matmul_par_openacc.h  matmul_par_openmp.c  matmul_par_openmp.h  matmul_par_phi_off_blas_mkl.c  matmul_par_phi_off_blas_mkl.h  matmul_par_phi_off_openmp.c  matmul_par_phi_off_openmp.h  matmul_par_strassen_omp.c  matmul_par_strassen_omp.h  matmul_par_xeonphi_openmp.c  matmul_par_xeonphi_openmp.h  matmul_seq.c  matmul_seq.h  matmul_seq_basic_opt.c  matmul_seq_basic_opt.h  matmul_seq_compl_opt.c  matmul_seq_compl_opt.h  matmul_seq_strassen.c  matmul_seq_strassen.h
src/common/: Alloc.c  Array.c  Cuda.cpp  Mat.c  Time.c
src/par/: Alpaka.cpp  Alpaka.cu  AlpakaOmpNative.cpp  AlpakaOmpNative.cu  AlpakaTiling.cpp  AlpakaTiling.cu  BlasCublas.c  BlasMkl.c  Cuda.cu  MpiCannon.c  MpiDns.c  Omp.c  OpenAcc.c  PhiOffBlasMkl.c  PhiOffOmp.c  StrassenOmp2.c
src/seq/: Basic.c  MultipleOpts.c  SingleOpts.c  Strassen.c
